trying to fix the top-line alignment on entity pages.

--- a/_scss/bbg/_site.scss
+++ b/_scss/bbg/_site.scss
@@ -363,7 +363,10 @@ article {
 					weight: 100;
 				};
 				line-height: 2.5;
-				margin-bottom: $site-margins;
+				margin: {
+					top: -.8rem;
+					bottom: $site-margins;
+				}
 			}
 		}
 	}
@@ -378,6 +381,10 @@ article {
 		&.large{
 			max-width: none;
 			width: 33%;
+
+			&:first-child {
+				margin-top: -1rem;
+			}
 		}
 	}
 
