--- a/style-human.css
+++ b/style-human.css
@@ -4433,6 +4433,7 @@ article {
     font-size: 1.7rem;
     font-weight: 100;
     line-height: 2.5;
+    margin-top: -.8rem;
     margin-bottom: 3rem;
   }
 
@@ -4445,6 +4446,9 @@ article {
   .bbg__article-sidebar.large {
     max-width: none;
     width: 33%;
+  }
+  .bbg__article-sidebar.large:first-child {
+    margin-top: -1rem;
   }
 }
 .bbg__article-sidebar--left {
